--- a/.prettierrc
+++ b/.prettierrc
@@ -8,12 +8,14 @@
 	"arrowParens": "avoid",
 	"plugins": ["@trivago/prettier-plugin-sort-imports"],
 	"importOrder": [
+		"react",
 		"<THIRD_PARTY_MODULES>",
 		"/mui/",
+		"/models/",
 		"/components/",
 		"^../(.*)",
 		"^./(.*)",
-		"/module.scss/"
+		".css"
 	],
 	"importOrderSeparation": true,
 	"importOrderSortSpecifiers": true
