--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
 		"lib": ["ES2020", "DOM", "DOM.Iterable"],
 		"module": "ESNext",
 		"skipLibCheck": true,
+		"esModuleInterop": true,
 
 		/* Bundler mode */
 		"moduleResolution": "bundler",
@@ -17,6 +18,7 @@
 		"paths": {
 			"src/*": ["src/*"]
 		},
+		"types": ["jest", "node"],
 
 		/* Linting */
 		"strict": true,
@@ -24,6 +26,6 @@
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true
 	},
-	"include": ["src"],
+	"include": ["src", "src/__tests__/**/*.ts", "src/__tests__/**/*.tsx"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
