--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
 		"@emotion/styled": "^11.11.5",
 		"@mui/icons-material": "^5.15.20",
 		"@mui/material": "^5.15.20",
+		"@reduxjs/toolkit": "^2.2.5",
+		"@types/react-redux": "^7.1.33",
 		"@types/uuid": "^9.0.8",
 		"jest-environment-jsdom": "^29.7.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^9.1.2",
+		"redux": "^5.0.1",
 		"uuid": "^10.0.0"
 	},
 	"devDependencies": {
